samples/_failures_safe/1761397499_1e55f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90454bfe.c: In function ‘main’:
./samples/SAFE/__tmp_90454bfe.c:150:9: error: expected declaration or statement at end of input
  150 |         }
      |         ^
./samples/SAFE/__tmp_90454bfe.c:150:9: error: expected declaration or statement at end of input
